--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ScheduleSPb",
+  "name": "schedule",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,20 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.3.0-alpha.1",
+    "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
-    "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
-    "redux": "^1.0.0-rc",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1"
   },
   "devDependencies": {
-    "babel-jest": "23.0.0-alpha.0",
+    "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.2",
-    "react-test-renderer": "16.3.0-alpha.1",
-    "redux-devtools": "^3.4.1"
+    "jest": "22.4.3",
+    "react-test-renderer": "^16.3.0-alpha.1"
   },
   "jest": {
     "preset": "react-native"
