--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-code-push": "^5.3.2",
+    "react-native-material-ui": "^1.20.0",
+    "react-native-windows": "^0.54.0-rc.1",
     "react-navigation": "^1.5.8",
     "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
@@ -25,7 +27,8 @@
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "rnpm-plugin-windows": "^0.2.8"
   },
   "jest": {
     "preset": "react-native"
